--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.cafewill'
 
 android {
     compileSdkVersion 28
