--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         google()
         jcenter()
         mavenCentral ()
-        maven { url 'https://maven.google.com' }
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -22,6 +22,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral ()
+        maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
         flatDir {
             dirs 'libs'
