--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/caches
 /.idea/libraries
 /.idea/vcs.xml
+/.idea/gradle.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
